fix: fixed style overlap for h tags

--- a/src/components/detailsModal/eventDetailsModal.css
+++ b/src/components/detailsModal/eventDetailsModal.css
@@ -165,7 +165,7 @@
 
 #calendar-widget .calendar-widget-details-modal .event-map-button {
   font-size: 0.875rem;
-  color: var(--dynamic-color-700);
+  color: var(--main-dynamic-color);
   background: none;
   border: none;
   cursor: pointer;
